# MailerSlave

./: .env.example  .gitignore  CONTRIBUTING.md  Dockerfile.backend  GMAIL_SETUP.md  QUICKSTART.md  README.md  README_v2.md  REFACTOR_SUMMARY.md  ROADMAP.md  USAGE.md  docker-compose.yml  pyproject.toml  start.sh  test_email.py
backend/: __init__.py  config.py  database.py  main.py  models.py  requirements.txt
backend/routes/: campaigns.py  contacts.py  dashboard.py  emails.py  templates.py
backend/services/: email_sender.py  ollama_service.py  template_service.py
docs/: ARCHITECTURE.md  ARCHITECTURE_V2.md  WEB_EXTENSION.md
frontend/: .env.example  package.json
frontend/app/: layout.tsx  page.tsx
frontend/app/campaigns/: page.tsx
frontend/app/campaigns/[id]/: page.tsx
frontend/app/campaigns/new/: page.tsx
frontend/app/contacts/: page.tsx
frontend/app/emails/: page.tsx
frontend/app/templates/: page.tsx
mailerslave/: __init__.py  cli.py
mailerslave/examples/: emails.csv  template.txt
mailerslave/modules/: __init__.py  config.py  csv_reader.py  email_sender.py  ollama_generator.py  template_handler.py
tests/: test_modules.py
